fix: adjust spacing and link letter spacing

--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -24,7 +24,7 @@
     @include media-bp-up(xl) {
       display: flex;
       gap: 6rem;
-      margin-top: 14rem;
+      margin-top: 16rem;
     }
   }
 }
