--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -3,16 +3,17 @@
 footer {
   // border-top: 2px dashed var(--brand-secondary);
   left: 50%;
-  padding: 8rem 0 2rem;
+  padding: 0 0 2rem;
   position: relative;
   text-align: center;
-  top: 4rem;
+  top: 8rem;
   transform: translateX(-50%);
 
   @include media-bp-up(md) {
     left: 0;
     text-align: left;
     transform: none;
+    top: 8rem;
   }
 
   a {
