--- a/src/sass/components/_nav.scss
+++ b/src/sass/components/_nav.scss
@@ -8,7 +8,7 @@
 
   a {
     color: var(--clr-text);
-    letter-spacing: -.5px;
+    letter-spacing: -.25px;
 
     &:not(:first-of-type) {
       margin-top: .75rem;
